--- a/back/package.json
+++ b/back/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
@@ -12,5 +12,10 @@
   "dependencies": {
     "express": "^4.18.2",
     "serve-index": "^1.9.1"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.17",
+    "@types/serve-index": "^1.9.1",
+    "typescript": "^5.0.3"
   }
 }
