--- a/back/package.json
+++ b/back/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "start": "nodemon src/server.ts",
+    "start:prod": "node dist/server.js"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +18,8 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/serve-index": "^1.9.1",
+    "nodemon": "^2.0.22",
+    "ts-node": "^10.9.1",
     "typescript": "^5.0.3"
   }
 }
